--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
       <!-- Navigation (same font size for all items) -->
       <nav class="hidden md:flex items-center gap-8 font-medium text-white/80 text-base">
-        <a href="#about" class="hover:text-white transition">About</a>
+        <a href="index.html #about" class="hover:text-white transition">About</a>
         <a href="surgery.html" class="hover:text-white transition">Surgery</a>
         <a href="globalhealth.html" class="hover:text-white transition">Global Health</a>
         <a href="location.html" class="hover:text-white transition">Contact</a>
@@ -349,7 +349,7 @@
             You may book an appointment with Dr Sim by calling a location convenient to you.
           </p>
 
-          <a href="contact.html"
+          <a href="location.html"
              class="inline-block mt-4 rounded-lg bg-peach-300 text-forest-900 font-bold px-6 py-3 hover:bg-peach-200 transition">
             Book an appointment ›
           </a>
