--- a/surgery.html
+++ b/surgery.html
@@ -58,7 +58,7 @@
 
         <!-- Navigation (same font size for all items) -->
       <nav class="hidden md:flex items-center gap-8 font-medium text-white/80 text-base">
-        <a href="index.html #about" class="hover:text-white transition">About</a>
+        <a href="index.html" class="hover:text-white transition">About</a>
         <a href="surgery.html" class="hover:text-white transition">Surgery</a>
         <a href="globalhealth.html" class="hover:text-white transition">Global Health</a>
         <a href="location.html" class="hover:text-white transition">Contact</a>
@@ -287,3 +287,4 @@
 
 </body>
 </html>
+
