--- a/globalhealth.html
+++ b/globalhealth.html
@@ -68,7 +68,7 @@
 
       <!-- Navigation (same font size for all items) -->
       <nav class="hidden md:flex items-center gap-8 font-medium text-white/80 text-base">
-        <a href="index.html #about" class="hover:text-white transition">About</a>
+        <a href="index.html" class="hover:text-white transition">About</a>
         <a href="surgery.html" class="hover:text-white transition">Surgery</a>
         <a href="globalhealth.html" class="hover:text-white transition">Global Health</a>
         <a href="location.html" class="hover:text-white transition">Contact</a>
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
