--- a/location.html
+++ b/location.html
@@ -314,7 +314,7 @@
       </div>
 
       <nav class="hidden md:flex items-center gap-8 font-medium text-white/80 text-base">
-        <a href="index.html #about" class="hover:text-white transition">About</a>
+        <a href="index.html" class="hover:text-white transition">About</a>
         <a href="surgery.html" class="hover:text-white transition">Surgery</a>
         <a href="globalhealth.html" class="hover:text-white transition">Global Health</a>
         <a href="location.html" class="hover:text-white transition">Contact</a>
@@ -477,6 +477,7 @@
 
 </body>
 </html>
+
 
 
 
