--- a/location.html
+++ b/location.html
@@ -71,7 +71,6 @@
       color:#fff;
       overflow:hidden;
     }
-    /* base dark overlay for readability */
     .contact-hero::before{
       content:"";
       position:absolute;
@@ -79,7 +78,6 @@
       background: rgba(0,0,0,0.52);
       z-index:0;
     }
-    /* bottom blend overlay to transition into next section */
     .contact-hero::after{
       content:"";
       position:absolute;
@@ -87,7 +85,6 @@
       bottom:-1px;
       height: var(--blend-height);
       z-index:1;
-      /* fade into the darker tones that start section 2 */
       background: linear-gradient(
         to bottom,
         rgba(4,16,3,0.00) 0%,
@@ -107,6 +104,7 @@
       font-size:2.8rem;
       margin:0 0 14px;
       letter-spacing:-0.3px;
+      font-family:"Playfair Display", serif;
     }
     .contact-hero .intro{
       max-width:820px;
@@ -121,8 +119,6 @@
       padding:64px 18px;
       position:relative;
       overflow:hidden;
-
-      /* Slight overlap upward so the blend feels seamless */
       margin-top: calc(var(--blend-height) * -0.35);
 
       background-image:url("https://images.unsplash.com/photo-1627687579653-1a7eacb78c82?q=80&w=709&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
@@ -130,7 +126,6 @@
       background-position:75% center;
       background-repeat:no-repeat;
     }
-    /* main overlay */
     .contacts-bg::before{
       content:"";
       position:absolute;
@@ -146,7 +141,6 @@
         );
       z-index:0;
     }
-    /* top blend overlay to meet section 1 */
     .contacts-bg::after{
       content:"";
       position:absolute;
@@ -174,6 +168,7 @@
       font-size:1.5rem;
       margin:0 0 22px;
       color:#fff;
+      font-family:"Playfair Display", serif;
     }
     .contact-list{ max-width:540px; }
     .contact-card{
@@ -185,6 +180,7 @@
       display:block;
       font-size:1.1rem;
       margin-bottom:6px;
+      font-family:"Playfair Display", serif;
     }
     .contact-card .address{
       color:#eef3f0;
@@ -237,6 +233,7 @@
       letter-spacing:1px;
       color:var(--forest-dark);
       margin-bottom:14px;
+      font-family:"Playfair Display", serif;
     }
     .clinic-btn{
       width:100%;
@@ -251,6 +248,7 @@
       color:var(--forest-dark);
       margin-bottom:10px;
       line-height:1.35;
+      font-family:Montserrat,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
     }
     .clinic-btn small{
       display:block;
@@ -265,11 +263,10 @@
       outline:1px solid rgba(139,90,43,0.40);
     }
 
-    @media(max-width:900px){
-      .map-shell iframe{ height:420px; }
-      .map-panel{ width:260px; padding:14px; top:12px; right:12px; }
+    /* Hide MAP + buttons on MOBILE ONLY */
+    @media (max-width: 900px){
+      .map-shell{ display:none; }
 
-      /* On mobile, a vertical blend reads better */
       .contact-hero::after{
         height: calc(var(--blend-height) * 0.9);
       }
@@ -302,7 +299,7 @@
 
 <body>
 
-  <!-- NAV BAR (COPIED FROM FINAL HOME SCREEN) -->
+  <!-- NAV / HEADER (with mobile hamburger) -->
   <header class="sticky top-0 z-50 bg-forest-800/85 backdrop-blur border-b border-white/10">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
 
@@ -313,6 +310,7 @@
         </span>
       </div>
 
+      <!-- Desktop Navigation -->
       <nav class="hidden md:flex items-center gap-8 font-medium text-white/80 text-base">
         <a href="index.html" class="hover:text-white transition">About</a>
         <a href="surgery.html" class="hover:text-white transition">Surgery</a>
@@ -320,11 +318,45 @@
         <a href="location.html" class="hover:text-white transition">Contact</a>
       </nav>
 
-      <a href="#footer"
-         class="rounded-lg bg-peach-300 text-forest-900 font-bold px-5 py-2.5 hover:bg-peach-200 transition"
-         style="font-family:'Playfair Display', serif;">
-        Book an appointment
-      </a>
+      <!-- Right side: CTA (desktop) + Hamburger (mobile) -->
+      <div class="flex items-center gap-3">
+        <!-- CTA (hide on mobile so header doesn't get cramped) -->
+        <a href="#footer"
+           class="hidden md:inline-flex rounded-lg bg-peach-300 text-forest-900 font-bold px-5 py-2.5 hover:bg-peach-200 transition"
+           style="font-family:'Playfair Display', serif;">
+          Book an appointment
+        </a>
+
+        <!-- Hamburger (mobile) -->
+        <button
+          id="mobileMenuBtn"
+          class="md:hidden inline-flex items-center justify-center rounded-lg border border-white/15 bg-forest-900/25 px-3 py-2 hover:bg-forest-900/40 transition"
+          aria-label="Open menu"
+          aria-controls="mobileMenu"
+          aria-expanded="false"
+          type="button"
+        >
+          <i data-feather="menu" class="w-5 h-5"></i>
+        </button>
+      </div>
+    </div>
+
+    <!-- Mobile Menu (collapsible) -->
+    <div id="mobileMenu" class="md:hidden hidden border-t border-white/10 bg-forest-800/95">
+      <nav class="max-w-7xl mx-auto px-6 py-4 flex flex-col gap-3 font-medium text-white/85 text-base"
+           style="font-family:'Playfair Display', serif;">
+        <a href="index.html" class="hover:text-white transition py-1">About</a>
+        <a href="surgery.html" class="hover:text-white transition py-1">Surgery</a>
+        <a href="globalhealth.html" class="hover:text-white transition py-1">Global Health</a>
+        <a href="location.html" class="hover:text-white transition py-1">Contact</a>
+
+        <div class="pt-2">
+          <a href="#footer"
+             class="inline-flex w-full justify-center rounded-lg bg-peach-300 text-forest-900 font-bold px-5 py-2.5 hover:bg-peach-200 transition">
+            Book an appointment
+          </a>
+        </div>
+      </nav>
     </div>
   </header>
 
@@ -335,10 +367,12 @@
 
       <div class="intro">
         <p>
-          Private consultations can be made with Dr Ben Sim by calling one of the locations below.
+          <strong>Private</strong> consultations can be made with Dr Ben Sim by calling one of the locations below.
         </p>
-        <p>
-          For public consultations please send your referral to the John Hunter Hospital Ophthalmology Clinic. Dr Ben Sim also operates on public patients at Kurri Kurri District hospital and Belmont Hospital which are teaching hospitals. While patients are not guaranteed a choice on their hospital location or the specific surgeon performing their procedure of their choice, all surgeries are conducted with utmost professionalism within a supervised training environment.
+        </p>
+         <p>
+       <p>
+          For <strong>public</strong> consultations please send your referral to the John Hunter Hospital Ophthalmology Clinic. Dr Ben Sim also operates on public patients at Kurri Kurri District hospital and Belmont Hospital which are teaching hospitals. While patients are not guaranteed a choice on their hospital location or the specific surgeon performing their procedure of their choice, all surgeries are conducted with utmost professionalism within a supervised training environment.
         </p>
       </div>
     </div>
@@ -347,9 +381,8 @@
   <!-- CONTACTS SECTION WITH IMAGE BACKGROUND -->
   <section class="contacts-bg" aria-label="Clinic contact details">
     <div class="contact-inner">
-
       <div class="contact-list">
-        <!-- 1) Warners Bay -->
+
         <div class="contact-card">
           <strong>Warners Bay – Ophthalmic Associates</strong>
           <div class="address">Shop 6, Bayway Centre, 34 John Street, Warners Bay NSW 2282</div>
@@ -359,7 +392,6 @@
           </div>
         </div>
 
-        <!-- 2) Maitland -->
         <div class="contact-card">
           <strong>Maitland – Ophthalmic Associates</strong>
           <div class="address">106 Victoria St, East Maitland NSW 2323</div>
@@ -369,7 +401,6 @@
           </div>
         </div>
 
-        <!-- 3) Charlestown -->
         <div class="contact-card">
           <strong>Charlestown – Charlestown Eye Centre</strong>
           <div class="address">12 Smith St, Charlestown NSW 2290</div>
@@ -379,7 +410,6 @@
           </div>
         </div>
 
-        <!-- 4) Hamilton -->
         <div class="contact-card">
           <strong>Hamilton – Care Foresight Pty Ltd</strong>
           <div class="address">59 Cleary St, Hamilton NSW 2303</div>
@@ -388,11 +418,12 @@
             <a href="mailto:reception@drsdunlop.com.au">reception@drsdunlop.com.au</a>
           </div>
         </div>
+
       </div>
     </div>
   </section>
 
-  <!-- MAP -->
+  <!-- MAP (hidden on mobile via CSS) -->
   <section class="map-shell" aria-label="Map of clinic locations">
     <iframe
       id="mapFrame"
@@ -471,13 +502,42 @@
   </section>
 
   <script>
+    // Feather icons
     feather.replace();
+
+    // Footer year
     document.getElementById("footerYear").textContent = new Date().getFullYear();
+
+    // Map switcher (desktop/tablet only; map is hidden on mobile)
+    function setMap(address, btn){
+      const frame = document.getElementById("mapFrame");
+      frame.src = "https://www.google.com/maps?q=" + encodeURIComponent(address) + "&output=embed";
+      document.querySelectorAll(".clinic-btn").forEach(b => b.classList.remove("active"));
+      btn.classList.add("active");
+    }
+
+    // Mobile menu toggle
+    const btn = document.getElementById("mobileMenuBtn");
+    const menu = document.getElementById("mobileMenu");
+
+    function setExpanded(isOpen) {
+      btn.setAttribute("aria-expanded", String(isOpen));
+    }
+
+    btn.addEventListener("click", () => {
+      const isHidden = menu.classList.contains("hidden");
+      menu.classList.toggle("hidden");
+      setExpanded(isHidden);
+    });
+
+    // Close the mobile menu after clicking a link
+    menu.querySelectorAll("a").forEach((a) => {
+      a.addEventListener("click", () => {
+        menu.classList.add("hidden");
+        setExpanded(false);
+      });
+    });
   </script>
 
 </body>
 </html>
-
-
-
-
