Add Google Analytics tracking

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dr Ben Sim | Ophthalmologist</title>
 
+  <meta name="description" content="Dr Ben Sim is a specialist ophthalmologist providing cataract surgery and eye care in Newcastle and Lake Macquarie. Referrals welcome.">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="canonical" href="https://www.drbensim.com.au/">
+
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -178,6 +184,16 @@
       }
     }
   </style>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKNK1K2V9S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZKNK1K2V9S');
+</script>
 </head>
 
 <body class="bg-forest-700 text-white antialiased">
@@ -415,3 +431,4 @@
 
 </body>
 </html>
+
