--- a/disclaimer.html
+++ b/disclaimer.html
@@ -41,6 +41,15 @@
     html { scroll-behavior: smooth; }
     body { font-family: "Playfair Display", serif; }
   </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKNK1K2V9S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZKNK1K2V9S');
+</script>
 </head>
 
 <body class="bg-forest-700 text-white antialiased">
@@ -230,3 +239,4 @@
 
 </body>
 </html>
+
