--- a/globalhealth.html
+++ b/globalhealth.html
@@ -51,6 +51,16 @@
       background-attachment: fixed;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKNK1K2V9S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZKNK1K2V9S');
+</script>
+
 </head>
 
 <body class="bg-forest-700 text-white antialiased">
@@ -197,3 +207,4 @@
 
 </body>
 </html>
+
