--- a/location.html
+++ b/location.html
@@ -295,6 +295,16 @@
       }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKNK1K2V9S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZKNK1K2V9S');
+</script>
+
 </head>
 
 <body>
@@ -544,3 +554,4 @@
 
 </body>
 </html>
+
