Update homepage title and meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr Ben Sim | Ophthalmologist</title>
+  <title>Specialist Ophthalmologist | Dr Ben Sim | Newcastle & Lake Macquarie</title>
 
   <meta name="description" content="Dr Ben Sim is a specialist ophthalmologist providing cataract surgery and eye care in Newcastle and Lake Macquarie. Referrals welcome.">
 
@@ -431,4 +431,5 @@
 
 </body>
 </html>
+
 
