Update homepage title and meta description

--- a/location.html
+++ b/location.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact</title>
+  <title>Locations | Dr Ben Sim | Newcastle & Lake Macquarie</title>
+<meta name="description" content="Find clinic locations and appointment details for Dr Ben Sim, specialist ophthalmologist serving Newcastle and Lake Macquarie.">
 
   <!-- Tailwind (for navbar/footer styling consistency) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -554,4 +555,5 @@
 
 </body>
 </html>
+
 
