Update homepage title and meta description

--- a/surgery.html
+++ b/surgery.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Surgical Procedures | Dr. Ben Sim</title>
+  <title>Eye Surgery | Dr Ben Sim | Cataract and Ophthalmology Care</title>
+<meta name="description" content="Learn about surgical services provided by Dr Ben Sim, specialist ophthalmologist. Information on cataract surgery and other eye procedures, including what to expect.">
 
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -351,4 +352,5 @@
 
 </body>
 </html>
+
 
