Update homepage title and meta description

--- a/globalhealth.html
+++ b/globalhealth.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr Ben Sim | Global Health</title>
+ <title>Global Health | Dr Ben Sim</title>
+  <meta name="description" content="Dr Ben Sim’s global health work and commitments, including outreach and experience supporting eye care beyond Australia.">
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -207,4 +208,5 @@
 
 </body>
 </html>
+
 
